--- a/packages/beynac/tsconfig.build.json
+++ b/packages/beynac/tsconfig.build.json
@@ -4,5 +4,20 @@
 		"stripInternal": true,
 		"declarationMap": true
 	},
-	"exclude": ["node_modules", "dist", "src/**/*.test.ts", "src/**/*.spec.ts"]
+	"exclude": [
+		"node_modules",
+		"dist",
+		"src/**/*.test.ts",
+		"src/**/*.test.tsx",
+		"src/**/*.test.js",
+		"src/**/*.test.jsx",
+		"src/**/*.spec.ts",
+		"src/**/*.spec.tsx",
+		"src/**/*.spec.js",
+		"src/**/*.spec.jsx",
+		"**/*.test.ts",
+		"**/*.test.tsx",
+		"**/*.spec.ts",
+		"**/*.spec.tsx"
+	]
 }
