--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -34,6 +34,7 @@
 		"@types/bun": "latest",
 		"beynac": "workspace:",
 		"bun-types": "latest",
+		"expect-type": "^1.2.2",
 		"typescript": "^5.8.3"
 	}
 }
