Input hono tests, implement style attribute

--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -12,7 +12,8 @@
     }
   },
   "scripts": {
-    "check": "tsc --noEmit",
+    "check": "bun run check:tsc",
+    "check:tsc": "tsc --noEmit",
     "build": "tsc -p tsconfig.build.json",
     "clean": "rm -rf dist"
   },
