--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   ],
   "scripts": {
     "check": "bun run check:test && bun run check:lint && bun run check:projects",
-    "check:test": "bun test packages/*/src",
     "check:projects": "bun run --filter='*' check",
+    "check:tsc": "bun run --filter='*' check:tsc",
     "check:lint": "eslint .",
-    "format": "prettier --write . && eslint . --fix",
+    "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
   "devDependencies": {
