--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,5 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "cSpell.words": ["Beynac", "jsxs", "laravel", "vendored"]
+  "cSpell.words": ["Beynac", "jsxs", "laravel", "unitless", "vendored"]
 }
