--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -35,6 +35,7 @@
     "@types/bun": "latest",
     "beynac": "workspace:",
     "bun-types": "latest",
+    "csstype": "^3.1.3",
     "typescript": "^5.8.3"
   }
 }
