--- a/packages/beynac/tsconfig.json
+++ b/packages/beynac/tsconfig.json
@@ -29,8 +29,7 @@
     "skipLibCheck": true,
     "isolatedDeclarations": true,
     "declaration": true,
-    "types": ["bun-types"],
-    "baseUrl": "./src"
+    "types": ["bun-types"]
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
