Fix type errors / remove tmp-hono-view

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "cSpell.words": ["Beynac", "jsxs", "laravel", "unitless", "vendored"]
+  "cSpell.words": ["Beynac", "jsxs", "laravel", "unitless", "vendored"],
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
