--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -39,5 +39,8 @@
     "bun-types": "latest",
     "csstype": "^3.1.3",
     "typescript": "^5.8.3"
+  },
+  "dependencies": {
+    "devalue": "^5.3.2"
   }
 }
