--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -42,9 +42,9 @@
   "author": "Bernie Sumption",
   "license": "MIT",
   "devDependencies": {
-    "@types/bun": "latest",
+    "@types/bun": "1.2.19",
     "beynac": "workspace:",
-    "bun-types": "latest",
+    "bun-types": "1.2.19",
     "csstype": "^3.1.3",
     "typescript": "^5.8.3"
   },
