--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -21,6 +21,22 @@
     "./facades": {
       "types": "./dist/facades.d.ts",
       "import": "./dist/facades.js"
+    },
+    "./integrations/*": {
+      "types": "./dist/integrations/*.d.ts",
+      "import": "./dist/integrations/*.js"
+    },
+    "./view": {
+      "types": "./dist/view/index.d.ts",
+      "import": "./dist/view/index.js"
+    },
+    "./view/jsx-runtime": {
+      "types": "./dist/view/jsx-runtime.d.ts",
+      "import": "./dist/view/jsx-runtime.js"
+    },
+    "./view/jsx-dev-runtime": {
+      "types": "./dist/view/jsx-dev-runtime.d.ts",
+      "import": "./dist/view/jsx-dev-runtime.js"
     }
   },
   "scripts": {
@@ -51,10 +67,19 @@
     "beynac": "workspace:",
     "bun-types": "1.2.19",
     "csstype": "^3.1.3",
+    "next": "^15.0.0",
     "typescript": "^5.8.3"
   },
   "dependencies": {
     "devalue": "^5.3.2",
     "rou3": "^0.5.1"
+  },
+  "peerDependencies": {
+    "next": ">=15.0.0"
+  },
+  "peerDependenciesMeta": {
+    "next": {
+      "optional": true
+    }
   }
 }
