--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -42,6 +42,7 @@
   "scripts": {
     "check": "bun run check:tsc",
     "check:tsc": "tsc --noEmit",
+    "test:coverage": "bun test --coverage",
     "prebuild": "mkdir -p src/vendor && cp node_modules/csstype/index.d.ts src/vendor/csstype.d.ts",
     "build": "tsc -p tsconfig.build.json",
     "build:watch": "bun run build -- --watch",
