--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "test-apps/*"
   ],
   "scripts": {
+    "test": "bun test",
     "check": "bun run check:test && bun run check:projects && bun run check:lint",
     "check:test": "bun test packages/*/src",
     "check:projects": "bun run --filter='*' check",
