--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -77,8 +77,7 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "devalue": "^5.3.2",
-    "rou3": "^0.5.1"
+    "devalue": "^5.3.2"
   },
   "peerDependencies": {
     "next": ">=15.0.0"
