--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -72,7 +72,7 @@
     "@types/bun": "1.2.19",
     "beynac": "workspace:",
     "bun-types": "1.2.19",
-    "csstype": "^3.1.3",
+    "csstype": "3.1.3",
     "next": "^15.0.0",
     "typescript": "^5.8.3"
   },
