--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -14,10 +14,6 @@
       "types": "./dist/contracts/index.d.ts",
       "import": "./dist/contracts/index.js"
     },
-    "./events": {
-      "types": "./dist/events.d.ts",
-      "import": "./dist/events.js"
-    },
     "./facades": {
       "types": "./dist/facades.d.ts",
       "import": "./dist/facades.js"
@@ -46,12 +42,10 @@
   "scripts": {
     "test": "sh -c 'cd ../..; bun test packages/beynac/\"$@\"' --",
     "check": "bun run check:tsc",
-    "check:tsc": "tsc --noEmit",
+    "check:tsc": "tsgo --noEmit",
     "test:coverage": "bun test --coverage --coverage-reporter=lcov",
-    "prebuild": "mkdir -p src/vendor && cp node_modules/csstype/index.d.ts src/vendor/csstype.d.ts",
-    "build": "tsc -p tsconfig.build.json",
-    "build:watch": "bun run build -- --watch",
-    "postbuild": "mkdir -p dist/vendor && cp src/vendor/csstype.d.ts dist/vendor/",
+    "build": "tsdown",
+    "build:watch": "tsdown --watch",
     "clean": "rm -rf dist"
   },
   "files": [
@@ -70,10 +64,12 @@
   "license": "MIT",
   "devDependencies": {
     "@types/bun": "1.2.19",
+    "@typescript/native-preview": "^7.0.0-dev.20251023.1",
     "beynac": "workspace:",
     "bun-types": "1.2.19",
     "csstype": "3.1.3",
     "next": "^15.0.0",
+    "tsdown": "^0.15.9",
     "typescript": "^5.8.3"
   },
   "dependencies": {
