--- a/package.json
+++ b/package.json
@@ -13,20 +13,14 @@
     "check:test": "bun test packages/*/src",
     "check:projects": "bun run --filter='*' check",
     "check:tsc": "bun run --filter='*' check:tsc",
-    "check:lint": "eslint .",
+    "check:lint": "bun run --filter=* lint",
     "format": "prettier --write .",
     "format:check": "prettier --check ."
   },
   "devDependencies": {
-    "@eslint/js": "^9.18.0",
     "@types/bun": "1.2.21",
-    "@types/eslint__js": "^8.42.3",
     "bun-types": "1.2.21",
-    "eslint": "^9.18.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-eslint-comments": "^3.2.0",
     "prettier": "^3.4.2",
-    "prettier-plugin-organize-imports": "^4.3.0",
-    "typescript-eslint": "^8.22.0"
+    "prettier-plugin-organize-imports": "^4.3.0"
   }
 }
