--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -43,6 +43,7 @@
     "test": "sh -c 'cd ../..; bun test packages/beynac/\"$@\"' --",
     "check": "bun run check:tsc",
     "check:tsc": "tsgo --noEmit",
+    "lint": "oxlint --type-aware src/",
     "test:coverage": "bun test --coverage --coverage-reporter=lcov",
     "build": "tsdown",
     "build:watch": "tsdown --watch",
@@ -69,6 +70,8 @@
     "bun-types": "1.2.19",
     "csstype": "3.1.3",
     "next": "^15.0.0",
+    "oxlint": "^1.24.0",
+    "oxlint-tsgolint": "^0.2.1",
     "tsdown": "^0.15.9",
     "typescript": "^5.8.3"
   },
