--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,13 +4,6 @@
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "cSpell.words": [
-    "Beynac",
-    "bunfig",
-    "jsxs",
-    "laravel",
-    "unitless",
-    "vendored"
-  ],
+  "cSpell.words": ["Beynac", "bunfig", "jsxs", "laravel", "unitless", "vendored"],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
