--- a/package.json
+++ b/package.json
@@ -6,12 +6,10 @@
     "test-apps/*"
   ],
   "scripts": {
-    "test": "bun test",
     "build": "bun run --filter='*' build",
     "clean": "bun run --filter='*' clean",
-    "check": "bun run check:test && bun run check:projects && bun run check:lint && bun run check:format",
-    "check:test": "bun test packages/*/src",
-    "check:projects": "bun run --filter='*' check",
+    "check": "bun run check:test && bun run check:tsc && bun run check:lint && bun run check:format",
+    "check:test": "bun run --filter='*' check:test",
     "check:tsc": "bun run --filter='*' check:tsc",
     "check:lint": "bun run --filter=* lint",
     "check:format": "biome check .",
