--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -32,7 +32,11 @@
       }
     },
     "TSX": {
-      "formatter": { "language_server": { "name": "biome" } }
+      "formatter": { "language_server": { "name": "biome" } },
+      "code_actions_on_format": {
+        "source.fixAll.biome": true,
+        "source.organizeImports.biome": true
+      }
     },
     "JSON": {
       "formatter": { "language_server": { "name": "biome" } }
