--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -6,42 +6,15 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
-    ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.js"
-    },
-    "./contracts": {
-      "types": "./dist/contracts/index.d.ts",
-      "import": "./dist/contracts/index.js"
-    },
-    "./facades": {
-      "types": "./dist/facades.d.ts",
-      "import": "./dist/facades.js"
-    },
-    "./integrations/*": {
-      "types": "./dist/integrations/*.d.ts",
-      "import": "./dist/integrations/*.js"
-    },
-    "./view": {
-      "types": "./dist/view/index.d.ts",
-      "import": "./dist/view/index.js"
-    },
-    "./view/jsx-runtime": {
-      "types": "./dist/view/jsx-runtime.d.ts",
-      "import": "./dist/view/jsx-runtime.js"
-    },
-    "./view/jsx-dev-runtime": {
-      "types": "./dist/view/jsx-dev-runtime.d.ts",
-      "import": "./dist/view/jsx-dev-runtime.js"
-    },
-    "./router": {
-      "types": "./dist/router/index.d.ts",
-      "import": "./dist/router/index.js"
-    },
-    "./events": {
-      "types": "./dist/events.d.ts",
-      "import": "./dist/events.js"
-    }
+    ".": "./dist/index.js",
+    "./contracts": "./dist/contracts/index.js",
+    "./facades": "./dist/facades.js",
+    "./http": "./dist/http/index.js",
+    "./integrations/next": "./dist/integrations/next.js",
+    "./view": "./dist/view/index.js",
+    "./view/jsx-dev-runtime": "./dist/view/jsx-dev-runtime.js",
+    "./view/jsx-runtime": "./dist/view/jsx-runtime.js",
+    "./package.json": "./package.json"
   },
   "scripts": {
     "check": "bun run check:test && bun run check:tsc && bun run check:lint && bun run check:format",
@@ -92,5 +65,6 @@
     "next": {
       "optional": true
     }
-  }
+  },
+  "module": "./dist/index.js"
 }
