Review of case helpers

--- a/.zed/settings.json
+++ b/.zed/settings.json
@@ -14,6 +14,11 @@
           "configPath": "packages/beynac/.oxlintrc.json"
         }
       }
+    },
+    "codebook": {
+        "settings": {
+            "ignorePaths": ["**/*.test.ts"]
+        }
     }
   },
   "languages": {
