--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,16 @@
 {
-  "editor.defaultFormatter": "esbenp.prettier-vscode",
+  "editor.defaultFormatter": "biomejs.biome",
   "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.eslint": "explicit"
   },
-  "cSpell.words": ["Beynac", "bunfig", "jsxs", "laravel", "unitless", "vendored"],
+  "cSpell.words": [
+    "Beynac",
+    "bunfig",
+    "jsxs",
+    "laravel",
+    "unitless",
+    "vendored"
+  ],
   "typescript.tsdk": "node_modules/typescript/lib"
 }
