--- a/packages/beynac/.oxlintrc.json
+++ b/packages/beynac/.oxlintrc.json
@@ -7,21 +7,42 @@
     "typescript/no-explicit-any": "error",
     "typescript/consistent-type-imports": "error",
     "no-eval": "off",
-    "eslint/no-control-regex": "off",
-    "eslint/no-restricted-imports": ["error", {
-      "patterns": [{
-        "group": ["bun", "bun:*"],
-        "message": "Direct imports from 'bun' or 'bun:*' are only allowed in test files. Use 'node:' equivalents where possible."
-      }]
+    "no-control-regex": "off",
+    "prefer-node-protocol": "error",
+    "no-restricted-imports": ["error", {
+      "patterns": [
+        {
+          "group": ["bun", "bun:*"],
+          "message": "Direct imports from 'bun' or 'bun:*' are only allowed in test files. Use 'node:' equivalents where possible."
+        },
+        {
+          "group": ["node:path"],
+          "message": "Direct imports from 'node:path' should use the abstraction from src/storage/path.ts instead."
+        }
+      ]
     }]
   },
   "overrides": [
     {
-      "files": ["src/**/*.test.ts", "src/**/*.test.tsx", "src/**/*.test.mts", "src/test-utils/**", "test-setup.ts"],
+      "files": ["src/**/*.test.ts", "src/**/*.test.tsx", "src/**/*.test.mts", "src/test-utils/**", "src/invariants.test.ts", "src/contracts/contracts.test.ts"],
       "rules": {
         "typescript/no-explicit-any": "off",
         "typescript/unbound-method": "off",
-        "eslint/no-restricted-imports": "off"
+        "no-restricted-imports": "off"
+      }
+    },
+    {
+      "files": [
+        "src/storage/path.ts",
+        "src/helpers/headers.ts"
+      ],
+      "rules": {
+        "no-restricted-imports": ["error", {
+          "patterns": [{
+            "group": ["bun", "bun:*"],
+            "message": "Direct imports from 'bun' or 'bun:*' are only allowed in test files. Use 'node:' equivalents where possible."
+          }]
+        }]
       }
     }
   ]
