--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -19,7 +19,7 @@
   },
   "sideEffects": false,
   "scripts": {
-    "check": "bun run check:test && bun run check:tsc && bun run check:lint && bun run check:format",
+    "check": "bun run check:tsc && bun run check:test && bun run check:lint && bun run check:format",
     "check:test": "bun test --only-failures",
     "check:tsc": "tsgo --noEmit",
     "check:lint": "oxlint --type-aware src/",
