--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "format:check": "biome check ."
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.3.0",
+    "@biomejs/biome": "2.3.5",
     "@types/bun": "1.2.21",
     "bun-types": "1.2.21"
   }
