--- a/packages/beynac/docker-compose.yml
+++ b/packages/beynac/docker-compose.yml
@@ -8,8 +8,8 @@ services:
     environment:
       MINIO_ROOT_USER: minioadmin
       MINIO_ROOT_PASSWORD: minioadmin
-    volumes:
-      - ./.minio-data:/data
+    tmpfs:
+      - /data:size=256M
     command: server /data --console-address ":9001"
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
