--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -9,7 +9,10 @@
     ".": "./dist/index.js",
     "./contracts": "./dist/contracts/index.js",
     "./facades": "./dist/facades.js",
-    "./helpers": "./dist/helpers/index.js",
+    "./helpers/hash": "./dist/helpers/hash.js",
+    "./helpers/headers": "./dist/helpers/headers.js",
+    "./helpers/str": "./dist/helpers/str.js",
+    "./helpers/time": "./dist/helpers/time.js",
     "./http": "./dist/http/index.js",
     "./integrations/next": "./dist/integrations/next.js",
     "./view": "./dist/view/index.js",
@@ -52,14 +55,12 @@
     "beynac": "workspace:",
     "bun-types": "1.2.19",
     "csstype": "3.1.3",
+    "devalue": "^5.3.2",
     "next": "^15.0.0",
     "oxlint": "^1.24.0",
     "oxlint-tsgolint": "^0.2.1",
     "tsdown": "^0.15.9",
     "typescript": "^5.8.3"
-  },
-  "dependencies": {
-    "devalue": "^5.3.2"
   },
   "peerDependencies": {
     "next": ">=15.0.0"
