Added lint rules for console log statements

--- a/packages/beynac/.oxlintrc.json
+++ b/packages/beynac/.oxlintrc.json
@@ -10,6 +10,8 @@
     "no-control-regex": "off",
     "prefer-node-protocol": "error",
     "no-unused-private-class-members": "error",
+    "no-console": "error",
+    "no-debugger": "error",
     "no-restricted-imports": ["error", {
       "patterns": [
         {
@@ -34,7 +36,8 @@
         "typescript/no-explicit-any": "off",
         "typescript/unbound-method": "off",
         "no-restricted-imports": "off",
-        "no-eval": "off"
+        "no-eval": "off",
+        "no-console": "off"
       }
     },
     {
