Check for incorrectly bundled dependencies

--- a/packages/beynac/package.json
+++ b/packages/beynac/package.json
@@ -9,13 +9,15 @@
     ".": "./dist/index.js",
     "./container": "./dist/container/index.js",
     "./contracts": "./dist/contracts.js",
+    "./errors": "./dist/errors.js",
+    "./events": "./dist/events.js",
     "./facades": "./dist/facades.js",
     "./helpers/hash": "./dist/helpers/hash.js",
     "./helpers/headers": "./dist/helpers/headers.js",
     "./helpers/str": "./dist/helpers/str.js",
     "./helpers/time": "./dist/helpers/time.js",
     "./http": "./dist/http/index.js",
-    "./integrations": "./dist/integrations/index.js",
+    "./integrations": "./dist/integrations.js",
     "./integrations/next": "./dist/integrations/next.js",
     "./storage": "./dist/storage.js",
     "./testing": "./dist/testing/index.js",
@@ -34,10 +36,11 @@
     "format": "biome check --write .",
     "lint": "oxlint --type-aware src/",
     "test:coverage": "bun test --coverage --coverage-reporter=lcov",
-    "build": "tsdown",
+    "build": "tsdown && bun check-dist",
     "build:watch": "tsdown --watch",
     "clean": "rm -rf dist",
-    "regenerate-exports": "bun run scripts/regenerate-exports.ts"
+    "regenerate-exports": "bun run scripts/regenerate-exports.ts",
+    "check-dist": "bun run scripts/check-dist.ts"
   },
   "files": [
     "README.md",
